# openbb-example

./: Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
openbb_example/: home.py
openbb_example/pages/: crypto_onchain.py  dark_pool.py  gov_contracts.py  mutual_funds.py  options_analysis_gpt.py  pdf_gpt.py  sentiment_analysis.py
typings/langchain_experimental/autonomous_agents/: __init__.pyi
typings/langchain_experimental/generative_agents/: __init__.pyi  generative_agent.pyi  memory.pyi
typings/langchain_experimental/llms/: __init__.pyi
typings/langchain_experimental/pal_chain/: __init__.pyi  base.pyi  colored_object_prompt.pyi  math_prompt.pyi
typings/langchain_experimental/plan_and_execute/: __init__.pyi  agent_executor.pyi
typings/langchain_experimental/prompts/: __init__.pyi  load.pyi
typings/langchain_experimental/pydantic_v1/: __init__.pyi
typings/langchain_experimental/smart_llm/: __init__.pyi  base.pyi
typings/langchain_experimental/sql/: __init__.pyi  base.pyi
typings/openbb_terminal/: __init__.pyi  base_helpers.pyi  config_terminal.pyi  custom_prompt_toolkit.pyi  decorators.pyi  featflags_controller.pyi  helper_classes.pyi  helper_funcs.pyi  helpers_denomination.pyi  keys_controller.pyi  keys_model.pyi  keys_view.pyi  loggers.pyi  menu.pyi  parent_classes.pyi  rich_config.pyi  routine_functions.pyi  sdk.pyi  settings_controller.pyi  sources_controller.pyi  terminal_controller.pyi  terminal_helper.pyi  thought_of_the_day.pyi
typings/plotly/: basedatatypes.pyi  basewidget.pyi  tools.pyi
(+581 files in other folders)
